# Port-Sentinel

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  build_exe.bat  docker-compose.yml  launcher.py  pyproject.toml  run.bat  run.sh  sentinel.spec
backend/: __main__.py  main.py  requirements.txt
backend/core/: db.py  exceptions.py  metrics.py  policies.py  sniffer.py  threat_intel.py  watchdog.py
backend/os_adapters/: android_bridge.kt  darwin_bridge.py  win32_bridge.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  SocketContext.tsx  index.css  main.tsx  types.ts  useSocket.ts
frontend/src/assets/: index.css
frontend/src/components/: ConfirmModal.tsx  ControlPanel.tsx  PortTable.tsx  Sidebar.tsx  SparklineChart.tsx
frontend/src/hooks/: SocketContext.tsx  useSocket.ts
frontend/src/pages/: DashboardPage.tsx  HistoricalLogsPage.tsx  NetworkMapPage.tsx  ProcessControlPage.tsx  SettingsPage.tsx
frontend/src/services/: apiService.ts
port_sentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py
tests/integration/: __init__.py  test_firewall_commands.py  test_websocket_dispatch.py
tests/safety/: __init__.py  test_cleanup.py  test_system_pid_guard.py
tests/stress/: __init__.py  test_high_port_load.py
tests/unit/: __init__.py  test_control_endpoints.py  test_metrics.py  test_port_mapper.py  test_sniffer_callback.py
